<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="0dp"
    android:layout_marginRight="0dp"
    android:background="@drawable/gpc_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".view.main.MainActivity">


    <Button
        android:id="@+id/chat_button"
        style="@style/HomeScreen_Buttons"
        android:layout_width="0sp"
        android:layout_height="55dp"
        android:layout_marginBottom="24dp"
        android:onClick="onChatClicked"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/login_button" />

    <Button
        android:id="@+id/login_button"

        style="@style/HomeScreen_Buttons"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:onClick="onLoginClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/animation_button"
        style="@style/HomeScreen_Buttons"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:onClick="onAnimationClicked"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <ImageView
        android:id="@+id/message_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/chat_button"
        app:layout_constraintStart_toStartOf="@+id/chat_button"
        app:layout_constraintTop_toTopOf="@+id/chat_button"
        app:srcCompat="@drawable/ic_chat" />

    <TextView
        android:id="@+id/chat_button_text"
        style="@style/HomeScreen_Button_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/chat_button"
        app:layout_constraintBottom_toBottomOf="@+id/chat_button"
        app:layout_constraintStart_toEndOf="@+id/message_logo"
        app:layout_constraintTop_toTopOf="@+id/chat_button" />

    <TextView
        android:id="@+id/login_button_text"
        style="@style/HomeScreen_Button_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/login_button"
        app:layout_constraintBottom_toBottomOf="@+id/login_button"
        app:layout_constraintStart_toEndOf="@+id/lock_logo"
        app:layout_constraintTop_toTopOf="@+id/login_button" />

    <TextView
        android:id="@+id/animation_button_text"
        style="@style/HomeScreen_Button_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/animation_button"
        app:layout_constraintBottom_toBottomOf="@+id/animation_button"
        app:layout_constraintStart_toEndOf="@+id/animation_logo"
        app:layout_constraintTop_toTopOf="@+id/animation_button" />

    <ImageView
        android:id="@+id/lock_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toTopOf="@+id/login_button"
        app:srcCompat="@drawable/ic_lock" />

    <ImageView
        android:id="@+id/animation_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/animation_button"
        app:layout_constraintStart_toStartOf="@+id/animation_button"
        app:layout_constraintTop_toTopOf="@+id/animation_button"
        app:srcCompat="@drawable/ic_animation" />


</androidx.constraintlayout.widget.ConstraintLayout>
